// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowDetail failure 1`] = `
<div>
  <div
    className="alert alert-danger"
    role="alert"
  >
    some error message
  </div>
  Loading...
</div>
`;

exports[`WorkflowDetail loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`WorkflowDetail success 1`] = `
<div
  className="panel-group"
>
  <div
    className="panel panel-default"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      Details
    </div>
    <div
      className="panel-body"
    >
      <div>
        <dl
          className="dl-horizontal"
        >
          <dt>
            Name
          </dt>
          <dd>
            Simple Workflow Example
          </dd>
          <dt>
            Version
          </dt>
          <dd>
            <ul
              className="pagination pagination-sm"
            >
              <li
                className="active"
                style={undefined}
              >
                <a
                  href="#"
                  onClick={[Function]}
                  role="button"
                >
                  1
                </a>
              </li>
            </ul>
          </dd>
          <dt>
            Schedule Active
          </dt>
          <dd>
            False
          </dd>
          <dt>
            Schedule
          </dt>
          <dd />
          <dt>
            Next Run
          </dt>
          <dd>
            
          </dd>
          <dt>
            Parameters
          </dt>
          <dd>
            <pre>
              MY_OBJECT_ID=1
              SOME_SETTING=false
            </pre>
          </dd>
        </dl>
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Edit
        </button>
      </div>
    </div>
  </div>
  <div
    className="panel panel-default"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      Tasks
    </div>
    <div
      className="panel-body"
    >
      <svg />
    </div>
  </div>
  <div
    className="panel panel-default"
    id={undefined}
  >
    <div
      className="panel-heading"
    >
      Runs
    </div>
    <div
      className="panel-body"
    >
      <div>
        <table
          className="table table-bordered table-condensed"
        >
          <thead>
            <tr>
              <th
                className="text-center"
              >
                Task
              </th>
              <th
                className="text-center"
                colSpan={1}
              >
                Run
              </th>
            </tr>
            <tr>
              <th />
              <th
                className="succeeded"
                onBlur={[Function]}
                onClick={null}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                #
                0
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                start
              </td>
              <td>
                <a
                  onClick={[Function]}
                  style={Object {}}
                >
                  <div
                    onBlur={[Function]}
                    onClick={null}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="succeeded glyphicon glyphicon-ok"
                    />
                  </div>
                </a>
              </td>
            </tr>
            <tr>
              <td>
                task2
              </td>
              <td>
                <a
                  onClick={[Function]}
                  style={Object {}}
                >
                  <div
                    onBlur={[Function]}
                    onClick={null}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="succeeded glyphicon glyphicon-ok"
                    />
                  </div>
                </a>
              </td>
            </tr>
            <tr>
              <td>
                task3
              </td>
              <td>
                <a
                  onClick={[Function]}
                  style={Object {}}
                >
                  <div
                    onBlur={[Function]}
                    onClick={null}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="succeeded glyphicon glyphicon-ok"
                    />
                  </div>
                </a>
              </td>
            </tr>
            <tr>
              <td>
                done
              </td>
              <td>
                <a
                  onClick={[Function]}
                  style={Object {}}
                >
                  <div
                    onBlur={[Function]}
                    onClick={null}
                    onFocus={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <span
                      className="succeeded glyphicon glyphicon-ok"
                    />
                  </div>
                </a>
              </td>
            </tr>
          </tbody>
        </table>
        <table
          className="table table-bordered table-condensed"
        >
          <tbody>
            <tr>
              <td>
                Key:
              </td>
              <td>
                <span
                  className="waiting glyphicon glyphicon-glass"
                />
                : 
                waiting
              </td>
              <td>
                <span
                  className="queued glyphicon glyphicon-calendar"
                />
                : 
                queued
              </td>
              <td>
                <span
                  className="running glyphicon glyphicon-console"
                />
                : 
                running
              </td>
              <td>
                <span
                  className="succeeded glyphicon glyphicon-ok"
                />
                : 
                succeeded
              </td>
              <td>
                <span
                  className="failed glyphicon glyphicon-remove"
                />
                : 
                failed
              </td>
              <td>
                <span
                  className="upstream_failed glyphicon glyphicon-minus"
                />
                : 
                upstream_failed
              </td>
            </tr>
          </tbody>
        </table>
        <button
          className="btn btn-default"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Start new run
        </button>
      </div>
    </div>
  </div>
</div>
`;
